--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
