--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.10.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -20,8 +21,11 @@
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.343.0",
+    "midtrans-client": "^1.3.1",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "prisma": "^5.10.2",
+    "prisma-client": "^0.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
