--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "5.10.2",
+    "@prisma/client": "^5.12.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@tiptap/extension-placeholder": "^2.2.5",
+    "@tiptap/pm": "^2.2.5",
+    "@tiptap/react": "^2.2.5",
+    "@tiptap/starter-kit": "^2.2.5",
     "class-variance-authority": "^0.7.0",
+    "cloudinary-core": "^2.13.1",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
@@ -24,10 +32,11 @@
     "midtrans-client": "^1.3.1",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
-    "prisma": "^5.10.2",
     "prisma-client": "^0.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-drag-drop-files": "^2.3.10",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
@@ -40,6 +49,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
