--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "react-drag-drop-files": "^2.3.10",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
